--- a/po/wesnoth-l/ru.po
+++ b/po/wesnoth-l/ru.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2012-01-21 16:22+0400\n"
+"PO-Revision-Date: 2012-04-06 17:06+0400\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: ru\n"
@@ -369,7 +369,7 @@ msgstr ""
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:261
 msgid "... I know... All right now, let’s stop these goblins!"
-msgstr "...Я знаю... Ладно, остановим-ка этих гоблинов!"
+msgstr "... Я знаю... Ладно, остановим-ка этих гоблинов!"
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:301
@@ -454,7 +454,7 @@ msgstr "Гоблины-налётчики вышли на охоту. Мы не 
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:389
 msgid "Look! Goblin riders are on the hunt — and heading right for Dallben!"
 msgstr ""
-"Смотрите! Гоблины-налётчики вышли на охоту. Они мчатся прямо на Даллбен!"
+"Смотрите! Гоблины-налётчики вышли на охоту — они мчатся прямо на Даллбен!"
 
 #. [message]: speaker=Remald
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:393
@@ -788,7 +788,7 @@ msgid ""
 "We need evidence. Hard evidence... but wait— Are those orcish war drums I "
 "hear?"
 msgstr ""
-"Нужны доказательства. Серьёзные доказательства... Стой, это что, орочьи "
+"Нужны доказательства. Серьёзные доказательства... постой-ка— Это что, орочьи "
 "боевые барабаны?"
 
 #. [message]: speaker=Relana
@@ -861,7 +861,7 @@ msgid ""
 msgstr ""
 "Мы задержались здесь слишком долго... Нет надежды, что мы сможем достичь "
 "Эленсефара и вернуться с помощью до того, как армия Веснота разрушит наши "
-"дома. Отступаем!!!"
+"дома. Отступаем!!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:280
@@ -924,13 +924,13 @@ msgid ""
 msgstr ""
 "Балдрас, ваше путешествие сюда не было разумным решением. Патрули королевы "
 "посетили местные деревни и привезли сюда старейшин. Те, кто присягнул на "
-"верность королеве, смогли вернуться домой. Те, кто отказался..."
+"верность королеве, смогли вернуться домой. Те, кто отказался—"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:194
 msgid ""
 "— Are dispatched on the spot. I know the price of dissent. But what of you?"
-msgstr "... были казнены на месте. Я знаю цену инакомыслия. Но что Вы?"
+msgstr "— Были казнены на месте. Я знаю цену инакомыслия. Но что Вы?"
 
 #. [message]: speaker=Lord Maddock
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:198
@@ -1042,7 +1042,7 @@ msgid ""
 "Their human aspect is returning! This is an evil manner of sorcery we face, "
 "but one that we may yet overcome. CHARGE!"
 msgstr ""
-"Их человеческая вид возвращается! Мы столкнулись со злым колдовством, но его "
+"Их человеческий вид возвращается! Мы столкнулись со злым колдовством, но его "
 "можно одолеть. В АТАКУ!"
 
 #. [message]: speaker=second_unit
@@ -1233,7 +1233,7 @@ msgid ""
 msgstr ""
 "Харпер, ты моложе и быстрее меня, и ты должен быть нашими глазами. Иди "
 "вперёд, и попробуй разведать путь мимо стражей, но только не останавливайся "
-"там, где они бы могли тебя видеть, а то у нас будут большие проблемы."
+"там, где они бы могли тебя видеть, а то у нас будут большие неприятности..."
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:658
@@ -1553,7 +1553,7 @@ msgid ""
 "Send your men with us. They will be valuable help as we prepare for the "
 "assault from the Wesnoth army garrison."
 msgstr ""
-"Отправьте своих людей со мной.  Они будут ценной помощью, так как мы "
+"Отправьте своих людей со мной. Они будут ценной помощью, так как мы "
 "готовимся к  нападению гарнизона армии Веснота."
 
 #. [message]: speaker=Helicrom
@@ -1630,7 +1630,7 @@ msgid ""
 "of action..."
 msgstr ""
 "Разбив лагерь на краю леса, они тихо наблюдали существенные перемещения "
-"войск, выходящих из ближайшего города, Алдрила, и  марширующих на северо-"
+"войск, выходящих из ближайшего города, Алдрила, и марширующих на северо-"
 "запад. Не будучи уверенными, что делать дальше, они обсуждали дальнеший план "
 "действий..."
 
@@ -1689,7 +1689,7 @@ msgid ""
 "are a fortress. They used to protect this area from the enemies of Wesnoth; "
 "I never imagined they would house its enemies."
 msgstr ""
-"Гарнизон. Башни Хальстеда  — больше чем гарнизон, племянник, это крепость. "
+"Гарнизон. Башни Хальстеда — больше чем гарнизон, племянник, это крепость. "
 "Когда-то они защищали эти места от врагов Веснота. Я и подумать не мог, что "
 "эти враги станут их хозяевами."
 
@@ -1884,7 +1884,7 @@ msgstr ""
 "Большая армия Веснота, которую возглавлял Высший Совет Архимагов, "
 "прочёсывала все равнины в поисках любых враждебных существ, будь то зверь, "
 "орк, или эльф. Город-государство Эленсефар был формально присоединён к "
-"королевству и поселения воскруг него стремительно разрастались. "
+"королевству и поселения воскруг него стремительно разрастались."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:32
@@ -2249,7 +2249,7 @@ msgstr ""
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:949
 msgid "Our dream of freedom... gone... Unngh."
-msgstr "Наши мечты о свободе ... разбиты... Ааа..."
+msgstr "Наши мечты о свободе ... разбиты... Уу."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:956
@@ -2322,7 +2322,7 @@ msgstr "Это не маленькая победа. Вы недооценива
 msgid ""
 "You... underestimate the... cruelty and ambition of your Queen... Uungh..."
 msgstr ""
-"Вы ... недооцениваете ... жестокость и амбиции вашей Королевы ... уххх..."
+"Вы ... недооцениваете ... жестокость и амбиции вашей Королевы ... Уххх..."
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:1073
@@ -2420,7 +2420,7 @@ msgid ""
 msgstr ""
 "Ставшие-преступниками-крестьяне добрались, наконец, до Даллбена. Он был "
 "сожжён до основания. В панике они помчались через лес к Делвин. Но и он было "
-"аналогично опустошён. Однако, они нашли один ключ к происшедшему."
+"аналогично опустошён. Однако, они нашли один ключ к происшедшему..."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/09_Epilogue.cfg:36
@@ -2590,7 +2590,7 @@ msgstr ""
 "магических искусств, теневые маги превратились в опытных бойцов. Будучи "
 "теперь полностью увлечены властью, они обычно имеют при себе небольшое число "
 "приверженцев. В бою с использованием магии они не могут противостать на "
-"равных  более традиционным магам, поэтому они направляют свою энергию на "
+"равных более традиционным магам, поэтому они направляют свою энергию на "
 "изматывающие атаки оружием ближнего боя. Несмотря на их власть, разложение в "
 "их душах начинает отрицательно влиять и на их здоровье."
 
@@ -2699,7 +2699,7 @@ msgstr ""
 #. [female]
 #: data/campaigns/Liberty/units/Villagers.cfg:150
 msgid "female^Watchwoman"
-msgstr "Сторож"
+msgstr "Стражница"
 
 #. [unit_type]: id=Fugitive_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:164
@@ -2785,7 +2785,7 @@ msgid ""
 "brightly when you pick it up!"
 msgstr ""
 "Вы находите здоровенный кулон на странном, словеще выглядящем алтаре. Когда "
-"вы его поднимаете, он начинает ярко мерцать."
+"вы его поднимаете, он начинает ярко мерцать!"
 
 #. [object]: id={ID}
 #: data/campaigns/Liberty/utils/utils.cfg:58
