--- a/po/wesnoth-ei/ru.po
+++ b/po/wesnoth-ei/ru.po
@@ -17,8 +17,8 @@ msgstr ""
 "Project-Id-Version: wesnoth-ei.po\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-03 10:40+0100\n"
-"PO-Revision-Date: 2011-08-12 23:20+0300\n"
-"Last-Translator: Ushkin N\n"
+"PO-Revision-Date: 2012-04-06 16:15+0400\n"
+"Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
 "Language-Team: \n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -26,9 +26,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: KBabel 1.11.2\n"
 "X-Poedit-Language: Russian\n"
 "X-Poedit-Country: RUSSIAN FEDERATION\n"
-"X-Generator: KBabel 1.11.2\n"
 "X-Poedit-SourceCharset: utf-8\n"
 
 #. [campaign]: id=Eastern_Invasion
@@ -702,7 +702,7 @@ msgstr ""
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:329
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:536
 msgid "holy amulet^Take it"
-msgstr "Святой Амулет^Взять его"
+msgstr "Взять"
 
 #. [scenario]: id=05_Northern_Outpost
 #. [scenario]: id=02_The_Escape_Tunnel
@@ -713,7 +713,7 @@ msgstr "Святой Амулет^Взять его"
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:330
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:537
 msgid "holy amulet^Leave it"
-msgstr "Святой Амулет^Оставить его"
+msgstr "Оставить"
 
 #. [scenario]: id=05_Northern_Outpost
 #. [scenario]: id=02_The_Escape_Tunnel
@@ -2103,7 +2103,7 @@ msgstr "Мерзкие орки! Возможно, стоило объедини
 #. [message]: speaker=Pelathsil
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:297
 msgid "It seems yon humans are mightier than I kenned..."
-msgstr "Кажется, эти люди более могущественны, чем я думал. Ух."
+msgstr "Кажется, эти люди более могущественны, чем я думал..."
 
 #. [message]: speaker=Pelathsil
 #: data/campaigns/Eastern_Invasion/scenarios/09_Xenophobia.cfg:310
@@ -2334,7 +2334,7 @@ msgstr "Хм..."
 #. [message]
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:308
 msgid "whisper^I dunno. He escaped, I think."
-msgstr "(Шёпотом) Не знаю. Думаю, что они сбежали."
+msgstr "Не знаю. Думаю, что они сбежали."
 
 #. [message]: speaker=King Dra-Nak
 #: data/campaigns/Eastern_Invasion/scenarios/11_Captured.cfg:312
@@ -2444,7 +2444,7 @@ msgid ""
 "Run for your — what the...?! Who are you?"
 msgstr ""
 "Всё потеряно! Мы должны покинуть северные земли как можно быстрее! Спасайте "
-"свою... Что за?! Кто ты такой?"
+"свою — что за...?! Кто ты такой?"
 
 #. [message]: speaker=Engineer
 #. This is thickly accented English
@@ -2468,7 +2468,7 @@ msgid ""
 "can’t get across. It’ll help you to escape."
 msgstr ""
 "Я гляжу, эти орки гоняются за вами, и если я взорву мост, они не смогут "
-"перебраться. Это и поможет вам сбежать. "
+"перебраться. Это и поможет вам сбежать."
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:215
@@ -2481,8 +2481,8 @@ msgid ""
 "I ain’t charging gold — I wants protecshun! Everywhere I go, I see orcs, "
 "undead. ’T’ain’t safe ’round ’ere!"
 msgstr ""
-"Я не продаюсь! Но мне нужна защита. Куды бы я шёл, всюду натыкаюсь то на "
-"орков, то на нежить. Здесь кругом небезопасно!"
+"Я не продаюсь — мне зашшыта нужна. Куды ни пойдёшь, всюду орки да нежить. "
+"Куда ни ткнись — везде пропадёшь!"
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:223
@@ -2591,7 +2591,7 @@ msgid ""
 "We could go south, and return to Wesnoth... but I do not know what that "
 "would accomplish."
 msgstr ""
-"Мы можем пойти на юг и вернуться в Веснот... Но я не знаю, чем это может "
+"Мы можем пойти на юг и вернуться в Веснот... но я не знаю, чем это может "
 "закончиться."
 
 #. [message]: speaker=Owaec
@@ -2621,7 +2621,7 @@ msgid ""
 msgstr ""
 "Не всё так уж безнадёжно. Если мы вернёмся в Веснот, то сможем помочь королю "
 "победить захватчиков. Мы сообщим ему, что нас атаковали. И у меня есть... "
-"совет для короля. Возможно, я знаю слабость в войске мертвецов."
+"совет. Для короля. Возможно, я знаю слабость в войске мертвецов."
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/12_Evacuation.cfg:385
@@ -2672,7 +2672,7 @@ msgid ""
 "may be able to help us in—"
 msgstr ""
 "Ну вот, мы достигли Конских Равнин, прекрасной родины моего народа. Они "
-"помогут нам в..."
+"помогут нам в—"
 
 #. [message]: speaker=Owaec
 #: data/campaigns/Eastern_Invasion/scenarios/13_The_Drowned_Plains.cfg:394
@@ -2680,7 +2680,7 @@ msgid ""
 "What?! Swamps?! Those undead have destroyed the grasslands of my House, and "
 "they shall pay for it!"
 msgstr ""
-"Что?! Болота? Эти мертвецы уничтожили мои родные луга, они заплатят за это!"
+"Что?! Болота?! Эти мертвецы уничтожили мои родные луга, они заплатят за это!"
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/13_The_Drowned_Plains.cfg:398
@@ -2696,12 +2696,12 @@ msgstr ""
 #. [message]: speaker=Engineer
 #: data/campaigns/Eastern_Invasion/scenarios/13_The_Drowned_Plains.cfg:402
 msgid "I s’ppose we’ll hav’ to wade across it anyway... ugh."
-msgstr "Думаю, нам по-любому придётся перебраться через него... Ух."
+msgstr "Похож, нам по-любому придётся через него топать... ух."
 
 #. [message]
 #: data/campaigns/Eastern_Invasion/scenarios/13_The_Drowned_Plains.cfg:410
 msgid "Findshhhh... slayhhhh... killhhhh..."
-msgstr "Найтиии... Сссокрушшшить... Убииить...."
+msgstr "Иссскать... крушшшить... душшшшить..."
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/13_The_Drowned_Plains.cfg:414
@@ -3120,7 +3120,7 @@ msgid ""
 "What is the point of this message? Does it consist of anything more than "
 "insults?"
 msgstr ""
-"И каков смысл этого сообщения? Это просто оскорбление или что-то большее? "
+"И каков смысл этого сообщения? Это просто оскорбление или что-то большее?"
 
 #. [message]: speaker=Messenger of Doom
 #: data/campaigns/Eastern_Invasion/scenarios/16_Weldyn_under_Attack.cfg:290
@@ -3181,7 +3181,7 @@ msgid ""
 "lord’s hordes at dawn tomorrow!"
 msgstr ""
 "Я упрощу твой выбор. Соглашайся, трус, или будешь сметён бешеной атакой "
-"армии моего лорда завтра на рассвете."
+"армии моего лорда завтра на рассвете!"
 
 #. [option]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/16_Weldyn_under_Attack.cfg:316
@@ -3241,8 +3241,7 @@ msgid ""
 "Wait — what just happened? He called more warriors out of the ground! That’s "
 "not allowed!"
 msgstr ""
-"Что? Это что ещё за шуточки? Он призвал ещё воинов из-под земли! Это "
-"нечестно!"
+"Эй — что ещё за шуточки? Он призвал ещё воинов из-под земли! Это нечестно!"
 
 #. [message]: speaker=Mal-Ravanal
 #: data/campaigns/Eastern_Invasion/scenarios/17a_The_Duel.cfg:146
@@ -3486,7 +3485,7 @@ msgid ""
 "you shall counsel Us in peace and the rebuilding of the Kingdom."
 msgstr ""
 "Дацин. Ты останешься с Нами, здесь; ты помогал этим двоим в войне, теперь ты "
-"будешь помогать Нам в мире, помогать восстанавливать Королевство. "
+"будешь помогать Нам в мире, помогать восстанавливать Королевство."
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/18_Epilogue.cfg:147
