--- a/po/wesnoth-multiplayer/ru.po
+++ b/po/wesnoth-multiplayer/ru.po
@@ -13,9 +13,9 @@ msgstr ""
 "Project-Id-Version: wesnoth.po\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-02-18 13:15+0100\n"
-"PO-Revision-Date: 2011-12-06 10:34+0200\n"
-"Last-Translator: Victor Sergienko <singalen@gmail.com>\n"
-"Language-Team:  <ru@li.org>\n"
+"PO-Revision-Date: 2012-04-05 20:07+0400\n"
+"Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
+"Language-Team: <ru@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1551,8 +1551,8 @@ msgid ""
 "1&4 vs. 2&3 (northeast vs. southwest). Designed for 75 starting gold, 20 "
 "villages."
 msgstr ""
-"Очень маленькая карта 2 против 2. Близкорасположенные боевые позиции "
-"означают быструю смену отрядов, потому важно тщательное планирование ходов. "
+"Очень маленькая карта 2 против 2. Близко расположенные боевые позиции "
+"означают быструю смену бойцов, потому важно тщательное планирование ходов. "
 "Игроки расположены так: 1 и 4 против 2 и 3 (северо-восток против юго-"
 "запада). Разработана для 75 начального золота, 20 деревень."
 
