updated Irish translation

--- a/po/wesnoth-aoi/ga.po
+++ b/po/wesnoth-aoi/ga.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: ga\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2011-05-19 14:22-0800\n"
+"PO-Revision-Date: 2012-02-25 11:30-0800\n"
 "Last-Translator: Carson Callis aka Mountian_King <tree_rings@rocketmail."
 "com>\n"
 "Language-Team: Irish <ga@li.org>\n"
@@ -58,12 +58,12 @@ msgstr "(Dúshlanach)"
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:18
 msgid "High Lord"
-msgstr "Tiarna Mór"
+msgstr "Ardtiarna"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:22
 msgid "(Novice level, 7 scenarios.)"
-msgstr "(Leibhéal Nóibhíseach, 7 misin)"
+msgstr "(Leibhéal Nóibhíseach, 7 misean)"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:22
@@ -76,23 +76,22 @@ msgstr ""
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:35
 msgid "Campaign Design"
-msgstr "Línitheoir Feachtas"
+msgstr "Línitheoir Feachtais"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:41
-#, fuzzy
 msgid "Adaptation for mainline"
-msgstr "(le Chatha Wesnoth 1.9.x)"
+msgstr "Athchóiriú do phríomhlíne"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:47
 msgid "Post 1.4 story and gameplay improvements"
-msgstr ""
+msgstr "Feabhsaithe scéil agus súgartha Iar-1.4"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:53
 msgid "Artwork and Graphics Design"
-msgstr "Ealaín agus Ceapaim Grafacheach"
+msgstr "Ealaín agus Dearadh Grafaice"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:60
@@ -119,7 +118,7 @@ msgstr "Earlornas"
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:28
 #: data/campaigns/An_Orcish_Incursion/scenarios/07_Showdown.cfg:34
 msgid "Elves"
-msgstr "Eilbh"
+msgstr "Na hEilbh"
 
 #. [side]: type=Orcish Warrior, id=Urugha
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:43
@@ -248,14 +247,15 @@ msgstr ""
 #. [message]: id=Lomarfel
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:145
 msgid "Yes, my lord!"
-msgstr "Sea, mo thiarna!"
+msgstr "Sea, a thiarna!"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:162
+#, fuzzy
 msgid ""
 "Look at them. Big, slow, clumsy and hardly a bow in hand. Keep to the trees, "
 "use your arrows and the day will be ours."
-msgstr ""
+msgstr "Féachaigí orthu."
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:171
@@ -298,19 +298,18 @@ msgstr "Ugh..."
 
 #. [message]: id=Urugha
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:205
-#, fuzzy
 msgid "Finally! Got him!"
-msgstr "Ar aghaidh go Baile Cuan Deisceartach!"
+msgstr "Faoi dheireadh! Tá beirthe air!"
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:212
 msgid "Lord!"
-msgstr "Tiarna!"
+msgstr "A thiarna!"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:216
 msgid "Take... command... Drive them... away."
-msgstr ""
+msgstr "Bí... i gceannas... Ruaig amach... iad."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:220
@@ -400,7 +399,7 @@ msgstr ""
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:142
 msgid "Gharlsa sees elves... yes... Fresh meat for wolves. Yes, yes..."
-msgstr "Gharlsa féachaint sióga... sea... Fheoil dóibh mhictíre. Sea, sea..."
+msgstr "Feiceann Gharlsa eilbh... sea... Feoil do mhictíre. Sea, sea..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:146
@@ -420,12 +419,12 @@ msgstr ""
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:165
 msgid "Yes... yes... Slay them!"
-msgstr "Sea... sea... Buaigh ar iad!"
+msgstr "Sea... sea... Buaigí orthu!"
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:176
 msgid "Hurts... failed... Rualsha gonna be angry..."
-msgstr "Gortú...theipthe... Beidh Ruailseá feargach air..."
+msgstr "Gortú...theipthe... Beidh fearg ar Ruailseá..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:187
@@ -538,8 +537,9 @@ msgstr ""
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:198
+#, fuzzy
 msgid "You won... elf... But it changes... nothing... (<i>cough</i>)"
-msgstr ""
+msgstr "Bhuaigh tú orm.. a eilbh... ach"
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:202
@@ -547,11 +547,13 @@ msgid ""
 "We found the way... Now... we will come in numbers... (<i>cough</i>) you "
 "can’t imagine..."
 msgstr ""
+"Fuaireamar an béalach... Anois... tiocfaimid go hiomadúil... (<i>casacht</"
+"i>) "
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:206
 msgid "(<i>Cough</i>) I’ll be waiting... among the dead..."
-msgstr ""
+msgstr "(<i>casacht</i>)  Beidh mé ag fanacht ort... i measc na marbh..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:217
@@ -809,7 +811,7 @@ msgstr ""
 #. [message]: speaker=second_unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/04_Valley_of_Trolls.cfg:297
 msgid "Ha! Me smashed da funny elf. Me got a trophy!"
-msgstr ""
+msgstr "Ha! Smiot mé an t-ealbh. Fuair mé comhramh!"
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/04_Valley_of_Trolls.cfg:301
@@ -927,7 +929,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:112
 msgid "Defeat Krughnar and break the siege"
-msgstr ""
+msgstr "Buaigh ar Krughnar agus bris an léigear"
 
 #. [objective]: condition=lose
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:120
@@ -992,7 +994,7 @@ msgstr ""
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:182
 msgid "... Glasses?"
-msgstr "... Gloine?"
+msgstr "... Gloiní?"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:186
@@ -1068,7 +1070,7 @@ msgstr ""
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:288
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:128
 msgid "Alas, Erlornas, I have failed us..."
-msgstr ""
+msgstr "Monuar géar, a Earlornas. Theip orm dúinn..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:306
@@ -1094,9 +1096,8 @@ msgstr ""
 
 #. [scenario]: id=06_A_Detour_through_the_Swamp
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:9
-#, fuzzy
 msgid "A Detour through the Swamp"
-msgstr "Oíche i Corcach"
+msgstr "Malairt Slí tríd an gCorcach"
 
 #. [side]: type=Lich, id=Keremal
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:44
@@ -1114,7 +1115,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:64
 msgid "Defeat Keremal"
-msgstr "Buaigh ar Cearemall"
+msgstr "Buaigh ar Cereamall"
 
 #. [message]: speaker=Linaera
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:117
