--- a/po/wesnoth-tsg/ga.po
+++ b/po/wesnoth-tsg/ga.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: ga\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-09-07 09:54-0800\n"
+"PO-Revision-Date: 2012-03-22 20:56-0800\n"
 "Last-Translator: Carson Callis aka Mountian_King <tree_rings@rocketmail."
 "com>\n"
 "Language-Team: Irish <ga@li.org>\n"
@@ -33,7 +33,7 @@ msgstr "AGD"
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:19
 msgid "(Novice level, 9 scenarios.)"
-msgstr "(Leibhéal Núíosaigh, 9 misin.)"
+msgstr "(Leibhéal Núíosaigh, 9 misean.)"
 
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:19
@@ -166,9 +166,8 @@ msgstr "An Dúnfort Abhann"
 
 #. [objective]: condition=win
 #: data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg:104
-#, fuzzy
 msgid "Investigate the river fort"
-msgstr "4p — Abhainn Loiris"
+msgstr "Scrúdaigh an garda abhann"
 
 #. [objective]: condition=win
 #: data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg:108
@@ -319,7 +318,7 @@ msgstr ""
 #: data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg:300
 #: data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg:526
 msgid "Death of Sir Gerrick"
-msgstr "Bás Shior Gerric"
+msgstr "Bás Sior Gerric"
 
 #. [message]: speaker=narrator
 #: data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg:302
@@ -429,7 +428,7 @@ msgstr "Alaron"
 #. [message]: speaker=unit
 #: data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg:501
 msgid "Who goes there! Come out of the house now!"
-msgstr ""
+msgstr "Cé a théann ansin?! Téigh amach as an teach anois!"
 
 #. [message]: speaker=Aleron
 #: data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg:505
@@ -621,7 +620,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg:251
 msgid "Bring Deoran to the Citadel of Westin"
-msgstr ""
+msgstr "Bog Deoran chuig an gCaithar Westin"
 
 #. [unit]: type=White Mage, id=Minister Hylas
 #: data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg:291
@@ -728,9 +727,8 @@ msgstr ""
 
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg:424
-#, fuzzy
 msgid "We’re too late! They’re burning the city..."
-msgstr "Táimid ró-dhéanach! "
+msgstr "Táimid ró-dhéanach! Tá an cathair á dhó acu..."
 
 #. [message]: speaker=Deoran
 #: data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg:429
@@ -925,7 +923,7 @@ msgstr ""
 #. [message]: speaker=narrator
 #: data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg:230
 msgid "You may now recruit Cavalrymen."
-msgstr ""
+msgstr "Féadtar marcaigh arm a earcú anois!"
 
 #. [message]: speaker=unit
 #: data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg:248
@@ -956,7 +954,7 @@ msgstr "Linderin"
 #. [event]
 #: data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg:286
 msgid "Mithalwe"
-msgstr "Mitealbhe"
+msgstr "Mitealbha"
 
 #. [event]
 #: data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg:287
@@ -1162,7 +1160,7 @@ msgstr "Íonghlan an Gleanntán Deor"
 #. [objective]: condition=win
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:226
 msgid "Move Ethiliel to Mebrin’s village"
-msgstr ""
+msgstr "Bog Etiliel go baile Mhebrin"
 
 #. [objective]: condition=lose
 #: data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg:242
@@ -1459,9 +1457,8 @@ msgstr ""
 
 #. [message]: speaker=Deoran
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:398
-#, fuzzy
 msgid "What of them?"
-msgstr "Buaighí iad!"
+msgstr "Cad fúthu?"
 
 #. [message]: speaker=Urza Afalas
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:403
@@ -1621,7 +1618,7 @@ msgstr ""
 #. [message]: speaker=Deoran
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:727
 msgid "Indeed. The dark king has fallen."
-msgstr ""
+msgstr "Cinnte. Fuair an rí dorcha bás."
 
 #. [message]: speaker=Urza Afalas
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:731
@@ -1714,8 +1711,9 @@ msgstr ""
 
 #. [message]: speaker=Deoran
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:792
+#, fuzzy
 msgid "My men are not dwarves! How are we to fight in catacombs and tunnels?"
-msgstr ""
+msgstr "Ní abhaic iad m'arm!"
 
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:796
@@ -1845,8 +1843,9 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg:213
 #: data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg:292
+#, fuzzy
 msgid "Move Sir Gerrick to the north end of the woods"
-msgstr ""
+msgstr "Bog Sior Gerric chuig an"
 
 #. [note]
 #: data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg:229
@@ -1880,7 +1879,7 @@ msgstr ""
 #. [message]: speaker=Queen Xeila
 #: data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg:270
 msgid "Hss... elves! Are they friends or enemies? Hss..."
-msgstr ""
+msgstr "Hss... eilbh! An naimhde nó cairde iad? Hss..."
 
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg:274
@@ -1928,7 +1927,7 @@ msgstr ""
 #. [message]: speaker=Kramak
 #: data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg:363
 msgid "Ho! Me see elves. Elves tasty? Me take elves to eat."
-msgstr "Óró! Feicim eilbh. An bhfuil blasta eilbh? Iosfaidh mé eilbh."
+msgstr "Óró! Feicim eilbh. An bhfuil eilbh blasta? Iosfaidh mé eilbh."
 
 #. [message]: race=elf
 #: data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg:368
@@ -1938,12 +1937,12 @@ msgstr "A Uasal Fathach, Nílimid blasta."
 #. [message]: speaker=Kramak
 #: data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg:372
 msgid "Oh. Me only want tasty food. Go away."
-msgstr "Ó. Teastaíonn uaim bia blasta amháin. Gluasigí."
+msgstr "Ó. Ní Theastaíonn ach uait bia blasta. Fág an áit."
 
 #. [message]: speaker=Kramak
 #: data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg:380
 msgid "Wait! Me not believe you. Me eat you!"
-msgstr "Fan fút! Ní mheasaim é sin. Táim ag ithe tú!"
+msgstr "Fan fúibh! Ní mheasaim é sin. Ithím thú!"
 
 #. [message]: speaker=Ogre
 #: data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg:391
@@ -2068,7 +2067,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg:518
 msgid "Move Deoran through the woods and over the river"
-msgstr ""
+msgstr "Bog Deoran trasna choill agus thar an abhainn"
 
 #. [objectives]
 #: data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg:545
@@ -2081,7 +2080,7 @@ msgstr ""
 #: data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg:731
 #, fuzzy
 msgid "Just a little further!"
-msgstr "Oh, faigh bás, a phéist-daonna."
+msgstr "Fan ar feadh nóiméid."
 
 #. [message]: speaker=Urza Afalas
 #: data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg:750
@@ -2133,8 +2132,9 @@ msgstr ""
 
 #. [message]: speaker=Urza Afalas
 #: data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg:917
+#, fuzzy
 msgid "We wish only to return to our homes!"
-msgstr ""
+msgstr "Níor mhaith linn ach fill"
 
 #. [message]: race=elf
 #: data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg:926
@@ -2168,9 +2168,8 @@ msgstr ""
 
 #. [scenario]: id=07a_Into_the_Depths
 #: data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg:5
-#, fuzzy
 msgid "Into the Depths"
-msgstr "Tuirlingt isteach i Dorchacht"
+msgstr "Ag Dul isteach sa Dhuibheagán"
 
 #. [side]: type=Ancient Lich, id=Mal M'Brin
 #. [side]: type=Lich, id=Mal M'Brin
@@ -2353,13 +2352,13 @@ msgstr ""
 #: data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg:589
 #, fuzzy
 msgid "No, sorry."
-msgstr "Tá brón orm."
+msgstr "(<i>Ag Gáire</i>) Tá brón orm!"
 
 #. [message]: speaker=unit
 #: data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg:622
 #, fuzzy
 msgid "I’m lighting it!"
-msgstr "Tá go maith."
+msgstr "Táim réidh. Déan é."
 
 #. [message]: speaker=unit
 #: data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg:656
@@ -2395,7 +2394,7 @@ msgstr ""
 #. [message]: speaker=Deoran
 #: data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg:700
 msgid "What is this? Elves bear steel swords."
-msgstr ""
+msgstr "Cad é seo? Beireann eilbh claímhte cruach."
 
 #. [message]: speaker=Ethiliel
 #: data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg:705
@@ -2647,7 +2646,7 @@ msgstr "Filleadh go Kerlath"
 #. [objective]: condition=win
 #: data/campaigns/The_South_Guard/scenarios/08a_Return_to_Kerlath.cfg:37
 msgid "Move Deoran into Kerlath Province"
-msgstr ""
+msgstr "Bog Deoran isteach i gCúige Kerlaith"
 
 #. [side]: type=Outlaw, id=Tharzo Kalain
 #: data/campaigns/The_South_Guard/scenarios/08a_Return_to_Kerlath.cfg:96
@@ -2685,7 +2684,7 @@ msgstr ""
 #. [message]: speaker=Plynry
 #: data/campaigns/The_South_Guard/scenarios/08a_Return_to_Kerlath.cfg:201
 msgid "Halt! Who comes to the border of Wesnoth?"
-msgstr ""
+msgstr "Stadaigí! Cé a thagann chuig an teorainn Wesnoth?"
 
 #. [message]: speaker=Deoran
 #: data/campaigns/The_South_Guard/scenarios/08a_Return_to_Kerlath.cfg:206
@@ -2773,7 +2772,7 @@ msgstr ""
 #. [message]: speaker=Minister Hylas
 #: data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg:364
 msgid "I have summoned the great Council of Westin!"
-msgstr ""
+msgstr "Ghair mé an Comhairle Westin mór!"
 
 #. [then]
 #. [else]
@@ -2844,7 +2843,7 @@ msgstr "Buaigh ar Mhál M'Brin"
 #. [objectives]
 #: data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg:421
 msgid "The Council of Westin will arrive on turn $council_arrive_turn|."
-msgstr ""
+msgstr "Tiocfaidh an Comhairle Wesnoth ag seal $council_arrive_turn|."
 
 #. [message]: speaker=unit
 #: data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg:511
@@ -2937,7 +2936,7 @@ msgstr ""
 #. [message]: speaker=Poor Farmer
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:172
 msgid "I am just a farmer! What did I do?!"
-msgstr ""
+msgstr "Ní ach feirmeoir mé! Cé a rinne mé?"
 
 #. [message]: speaker=Ithelden
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:176
@@ -3001,9 +3000,8 @@ msgstr ""
 
 #. [event]
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:249
-#, fuzzy
 msgid "Ithelden’s base"
-msgstr "Cosán bunaidh:"
+msgstr "Bunáit Ithelden"
 
 #. [objective]: condition=win
 #: data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg:255
@@ -3094,7 +3092,7 @@ msgstr "más"
 #. [unit_type]: id=Infantry Commander, race=human
 #: data/campaigns/The_South_Guard/units/Infantry_Commander.cfg:4
 msgid "Infantry Commander"
-msgstr "Ceannasaí Coisithe"
+msgstr "Ceannasaí Coise"
 
 #. [unit_type]: id=Infantry Commander, race=human
 #: data/campaigns/The_South_Guard/units/Infantry_Commander.cfg:28
@@ -3107,7 +3105,7 @@ msgstr ""
 #: data/campaigns/The_South_Guard/units/Infantry_Commander.cfg:32
 #: data/campaigns/The_South_Guard/units/Infantry_Lieutenant.cfg:31
 msgid "glaive"
-msgstr "claíomh-sleá"
+msgstr "claíomh"
 
 #. [attack]: type=impact
 #: data/campaigns/The_South_Guard/units/Infantry_Commander.cfg:41
