--- a/po/wesnoth-did/ga.po
+++ b/po/wesnoth-did/ga.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: ga\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-17 23:28+0200\n"
-"PO-Revision-Date: 2011-09-14 14:33-0800\n"
+"PO-Revision-Date: 2012-03-03 14:17-0800\n"
 "Last-Translator: Carson Callis aka Mountian_King <tree_rings@rocketmail."
 "com>\n"
 "Language-Team: Irish <ga@li.org>\n"
@@ -65,7 +65,7 @@ msgstr "Sumnadóir"
 #. [campaign]: id=Descent_into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
 msgid "(Intermediate level, 12 scenarios.)"
-msgstr "(Leibhéal Meánach, 12 mhisin)"
+msgstr "(Leibhéal Meánach, 12 mhisean)"
 
 #. [campaign]: id=Descent_into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
@@ -74,6 +74,9 @@ msgid ""
 "orcish incursion.\n"
 "\n"
 msgstr ""
+"D'fhonn do mhuintir a tarrtháil ó ruaig orcach, foghlaim na míndána "
+"dochracha marbhdraíochta.\n"
+"\n"
 
 #. [about]
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:25
@@ -93,7 +96,7 @@ msgstr "Ealaín agus Dearadh Grafaicí"
 #. [scenario]: id=01_Saving_Parthyn
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:6
 msgid "Saving Parthyn"
-msgstr "Parthyn á Sábháilte"
+msgstr "Parthyn á tarrtháil"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:21
@@ -259,9 +262,8 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:191
-#, fuzzy
 msgid "Several weeks pass..."
-msgstr "Bóthar $name|,Bearnas $name|,Cosán $name"
+msgstr "Mórán seachtaine ina dhiadh sin..."
 
 #. [message]: speaker=Drogan
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:196
@@ -484,12 +486,12 @@ msgstr "Buaigh ar na bobodha go léir"
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:297
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:351
 msgid "Death of Darken Volk"
-msgstr "Bás Dhárchain Volc"
+msgstr "Bás Dharchain Volc"
 
 #. [unit]: id=Darken Volk, type=Dark Sorcerer DiD
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:107
 msgid "Darken Volk"
-msgstr "Dárchan Volc"
+msgstr "Darchan Volc"
 
 #. [trait]: id=loyal
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:117
@@ -547,7 +549,7 @@ msgstr ""
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:220
 msgid "Beware the goblin guards in the villages."
-msgstr ""
+msgstr "Fainic thú féin ar na gardaí lúcharachán sna bhailte."
 
 #. [then]
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:233
@@ -569,7 +571,6 @@ msgstr "Éirígí, éirígí ó Tíortha na Marbh agus Meatha!"
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:297
-#, fuzzy
 msgid "What are those things?"
 msgstr "Cád iad na rud sin?"
 
@@ -617,14 +618,14 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:375
+#, fuzzy
 msgid "Excellent. I’m eager to move on to the real foes."
-msgstr ""
+msgstr "Ar fheabhas!"
 
 #. [scenario]: id=03_A_Haunting_in_Winter, race=dwarf (
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:6
-#, fuzzy
 msgid "A Haunting in Winter"
-msgstr "Baile Cuan Deisceartach sa Gheimhreadh"
+msgstr "Gnáthú sa Gheimhreadh"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:18
@@ -655,13 +656,12 @@ msgstr "Gorac Cól"
 #. [side]
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:94
 msgid "Free Undead"
-msgstr "Neamh-mharbha Saor"
+msgstr "Neamh-mharbha Saora"
 
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:119
-#, fuzzy
 msgid "Clear the cave of enemies"
-msgstr "Buachan ar rud"
+msgstr "Glan na naimhde ón uaimh"
 
 #. [event]
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:152
@@ -686,7 +686,7 @@ msgstr ""
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:192
 msgid "I... I will try."
-msgstr ""
+msgstr "Bainfidh mé... triail."
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:199
@@ -697,10 +697,11 @@ msgstr ""
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:208
+#, fuzzy
 msgid ""
 "Two necromancers are at the cave entrance! Up yer axes, boys, if ye dinna’ "
 "want tae be a walking pile o’ bones."
-msgstr ""
+msgstr "Dhá mharbhdraoi atá ag an oscailt uaimhe! Tuanna suas, a bhuachaillí,"
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:212
@@ -741,7 +742,7 @@ msgstr ""
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:257
 msgid "But why are they attacking me? And what should I do?!"
-msgstr ""
+msgstr "Cén fáth a bhfuil siad do m'íonsaí? Cad ba bhóir dom a dhéanamh?!"
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:261
@@ -792,9 +793,8 @@ msgstr "K’rrlar Oban"
 
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg:111
-#, fuzzy
 msgid "Move Malin to the end of the mountain pass"
-msgstr "Téigh Málan go dti an ceann thuas den altán sléibhe"
+msgstr "Bog Málan chuig an gceann bearnas"
 
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg:116
@@ -819,7 +819,7 @@ msgstr ""
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg:175
 msgid "Feel my wrath, vile creature!"
-msgstr ""
+msgstr "Mothaigh m'fhearg, a dhrochchréatúr!"
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/04_Beginning_of_the_Revenge.cfg:196
@@ -929,7 +929,7 @@ msgstr ""
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:313
 msgid "The last chieftain... he’s escaping! The coward!"
-msgstr ""
+msgstr "Tá an taoiseach deireanach... ag éalú! Is cladhaire é!"
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:317
@@ -942,10 +942,11 @@ msgstr ""
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:321
 msgid "On my own? Is my apprenticeship over?"
-msgstr ""
+msgstr "Liom féin? I m'aonair? An bhfuil mo phrintíseacht déanta?"
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:325
+#, fuzzy
 msgid ""
 "... Almost. The growth of your power has been truly impressive to watch. "
 "There is, however, a small favor I will ask of you. That will constitute the "
@@ -953,7 +954,7 @@ msgid ""
 "must attend. They need not concern you. I will meet up with you to the west "
 "in a few weeks. In the meantime, do not let the last chieftain escape "
 "justice."
-msgstr ""
+msgstr "... Beagnach."
 
 #. [scenario]: id=06_Return_to_Parthyn, id=Dela Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:6
@@ -988,14 +989,13 @@ msgstr "Déala Céiser"
 
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:131
-#, fuzzy
 msgid "Remove the traitor Drogan"
-msgstr "Díshuiteáil Forlíontáin"
+msgstr "Bain an brathadóir Dreogan"
 
 #. [objective]: condition=lose
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:135
 msgid "Kill any people from Parthyn but Drogan"
-msgstr ""
+msgstr "Maraigh duine as Parthyn ach Dreogan"
 
 #. [event]
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:185
@@ -1187,7 +1187,7 @@ msgstr "Ionróirí"
 #. [side]: type=General, id=Taylor
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:157
 msgid "Taylor"
-msgstr "Táilliur"
+msgstr "Taylor"
 
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:204
@@ -1256,11 +1256,13 @@ msgid ""
 "Sir! Undead creatures are coming out of the forest! Wake the guard "
 "immediately!"
 msgstr ""
+"A ghinearál! Tá créatúir neamh-mharbha ag imeacht as an gcoill! Dúisigh an "
+"garda ar an toirt!"
 
 #. [message]: speaker=Taylor
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:345
 msgid "To arms, men!"
-msgstr "Faoi airm, a fhir!"
+msgstr "Faoi airm, a fheara!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:386
@@ -1270,7 +1272,7 @@ msgstr "Ooouuuh! Dónn sé... dónnnn sssééééé..."
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:390
 msgid "What in the name of all demons of hell was this thing?"
-msgstr ""
+msgstr "Dar na deamhain ifrinn! Cad é an rud seo?"
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:394
@@ -1293,7 +1295,7 @@ msgstr "Bá Beag — Paírt 2"
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg:65
 msgid "Find the mage Lord Karres"
-msgstr "Faigh an Asarlaí Tiarna Caires"
+msgstr "Aimsigh an Asarlaí Tiarna Caires"
 
 #. [unit]: type=Arch Mage, type=Great Mage, id=Lord Karres
 #: data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg:121
@@ -1379,7 +1381,7 @@ msgstr ""
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:276
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:364
 msgid "We’ve got the book, but now how do we get out of here?"
-msgstr ""
+msgstr "Tá an leabhar againn, ach conas a théimid amach ón áit seo?"
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:280
@@ -1390,24 +1392,25 @@ msgstr ""
 
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:289
+#, fuzzy
 msgid "Escape via the tunnel in the northeast cellar"
-msgstr ""
+msgstr "Éalaigh"
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:310
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:401
 msgid "Phew! Let’s get out of here."
-msgstr ""
+msgstr "Téimis amach!"
 
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:343
 msgid "Escape the manor"
-msgstr "Éalaigh an mainéar"
+msgstr "Éalaigh ón mainéar"
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:371
 msgid "Wait, you aren’t leaving me behind, are you?"
-msgstr ""
+msgstr "Fan! An bhfágann tú mise i do dhiadh?"
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/09_A_Small_Favor3.cfg:382
@@ -1424,7 +1427,7 @@ msgstr ""
 #. [scenario]: id=10_Alone_at_Last
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:6
 msgid "Alone at Last"
-msgstr "Mé Féin faoi Dheireadh"
+msgstr "Linn Féin faoi Dheireadh"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:23
@@ -1451,7 +1454,7 @@ msgstr "Wesnothaigh"
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:143
 msgid "Take the book back from Darken Volk"
-msgstr ""
+msgstr "Tóg an leabhar ar ais ó Darchan Volc"
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:224
@@ -1625,7 +1628,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:576
 msgid "Bring the book back to Malin’s castle"
-msgstr ""
+msgstr "Beir an leabhar ar ais go caisleán Mhálain"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:591
@@ -1642,7 +1645,7 @@ msgstr "Tá an leabhar agam."
 #. [message]: speaker=unit
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:657
 msgid "I am sorry master, that is too heavy for me."
-msgstr ""
+msgstr "Tá brón orm a mháistir. Tá sé sin ró-trom dom."
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:691
@@ -1654,7 +1657,7 @@ msgstr ""
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:18
 msgid "<i>“To become a lich, one must first die.”</i>"
-msgstr ""
+msgstr "<i>“Bheith ina lích, caithfidh tú bás a fháil ar dtús.”</i>"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:23
@@ -1749,9 +1752,8 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:314
-#, fuzzy
 msgid "I’m ready. Do it."
-msgstr "Táim réidh."
+msgstr "Táim réidh. Déan é."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:369
@@ -1804,16 +1806,15 @@ msgstr ""
 
 #. [objective]: condition=win
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:479
-#, fuzzy
 msgid "Regain your strength"
-msgstr "Ag do ghiollacht."
+msgstr "Athghnóthaigh do laidre"
 
 #. [objective]: condition=lose
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:483
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:582
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:76
 msgid "Destruction of Mal Keshar"
-msgstr "Millteanas Mháil Céiser"
+msgstr "Millteanas Mhál Céiser"
 
 #. [message]: speaker=Mal Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:521
@@ -1846,10 +1847,11 @@ msgstr "Buaigh ar na troill"
 
 #. [message]: speaker=Dumdumbadoom
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:659
+#, fuzzy
 msgid ""
 "Who has awoken me from my slumber? Undead? I shall not suffer the existence "
 "of such foul creatures."
-msgstr ""
+msgstr "Cé a dhúisigh mé "
 
 #. [message]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:677
