--- a/po/wesnoth-tutorial/ga.po
+++ b/po/wesnoth-tutorial/ga.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ga\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-03-25 14:42+0200\n"
-"PO-Revision-Date: 2011-08-23 14:35-0800\n"
+"POT-Creation-Date: 2012-04-07 12:14+0200\n"
+"PO-Revision-Date: 2012-03-06 16:37-0800\n"
 "Last-Translator: Carson Callis aka Mountian_King <tree_rings@rocketmail."
 "com>\n"
 "Language-Team: Irish <ga@li.org>\n"
@@ -99,27 +99,25 @@ msgstr "Fáilte go Wesnoth!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:214
-#, fuzzy
 msgid ""
 "For this tutorial, you are playing Konrad.\n"
 "You are standing in the keep, and your mentor Delfador is on the east side "
 "of the river."
 msgstr ""
-"Ar feadh teagaisc seo, is tusa Conrad.\n"
-"You are standing in the keep, and your mentor Delfador is on the east side "
-"of the river."
+"Ar feadh an teagaisc seo, is tusa Conrad.\n"
+"Tá tú i do sheasamh sa daingean, agus tá do mheantóir Delfeador ar thaobh "
+"oirthearach an abhann."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:220
-#, fuzzy
 msgid ""
 "For this tutorial, you are playing Li’sar.\n"
 "You are standing in the keep, and your mentor Delfador is on the east side "
 "of the river."
 msgstr ""
 "Ar feadh teagaisc seo, is tusa Li’sar.\n"
-"You are standing in the keep, and your mentor Delfador is on the east side "
-"of the river."
+"Tá tú i do sheasamh sa daingean, agus tá do mheantóir Delfeador ar thaobh "
+"oirthearach an abhann."
 
 #. [event]
 #. [event]: id=student moves 0}
@@ -189,15 +187,13 @@ msgstr ""
 
 #. [message]: id=student
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:320
-#, fuzzy
 msgid "Good morning, Delfador! Is it time to attack things?"
-msgstr "Dia duit ar maidin, a Dheilfeadóir! Is it time to attacks things?"
+msgstr "Dia duit ar maidin, a Dhelfeador! An bhfuil sé ina am ionsaithe?"
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:324
-#, fuzzy
 msgid "Um, well..."
-msgstr "Go han-mhaith."
+msgstr "Bhuel..."
 
 #. [message]: id=student
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:328
@@ -224,7 +220,7 @@ msgstr "... an cuinteán seo!"
 #. [message]: id=student
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:368
 msgid "A quintain? You want me to fight a dummy?"
-msgstr ""
+msgstr "Cuinteán? Ar mhaith leat bréagóg a throid?"
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:375
@@ -267,9 +263,8 @@ msgstr ""
 
 #. [message]: id=student
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:442
-#, fuzzy
 msgid "Hey! This quintain fights back!"
-msgstr "Hóigh!"
+msgstr "Hóigh! Ionsaíonn an cuinteán seo ar ais!"
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:446
@@ -322,9 +317,8 @@ msgstr ""
 
 #. [message]: id=student
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:487
-#, fuzzy
 msgid "The <i>dummy</i> gets a turn?"
-msgstr "Seal a 11: Tuaisceartachtaí"
+msgstr "Faigheann an <i>bréagóg</i> seal?"
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:493
@@ -343,7 +337,7 @@ msgstr ""
 #. [message]: id=student
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:517
 msgid "Ouch! I need to heal! Only $student_hp hitpoints left!"
-msgstr ""
+msgstr "Ach! Tá cneasú de dhíth orm. Níl ach $student_hp pointe sláinte agam!"
 
 #. [event]
 #. [then]
@@ -369,12 +363,12 @@ msgstr ""
 #. [event]
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:542
 msgid "Click on the village to move Konrad"
-msgstr ""
+msgstr "Cliceáil ar an mbaile Conrad a bogáil"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:543
 msgid "Click on the village to move Li’sar"
-msgstr ""
+msgstr "Cliceáil ar an mbaile Li’sar a bogáil"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:561
@@ -400,7 +394,7 @@ msgstr ""
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:872
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:924
 msgid "Click on the <b>End Turn</b> button"
-msgstr ""
+msgstr "Cliceáil ar an gcnaipe <b>Críochnaigh Seal</b>"
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:603
@@ -468,7 +462,7 @@ msgstr ""
 #. [event]
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:656
 msgid "Right click on a castle tile and select <b>Recruit</b>"
-msgstr ""
+msgstr "Deaschliceáil ar tíl caisleáin agus socraigh <b>Earcaigh</b>"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:690
@@ -490,7 +484,7 @@ msgstr ""
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:704
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:737
 msgid "Right click on the other castle tile and recruit another unit"
-msgstr ""
+msgstr "Deaschliceáil ar an tíl caisleáin eile agus earcaigh aonad eile"
 
 #. [message]: id=student
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:759
@@ -613,7 +607,7 @@ msgstr ""
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:970
 msgid "Unit Descriptions"
-msgstr "Cuntas na hAonad"
+msgstr "Cuntas Aonad"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:972
@@ -680,7 +674,7 @@ msgstr ""
 #. [message]: speaker=second_unit
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1074
 msgid "The quintain is destroyed, and I have gained more experience!"
-msgstr ""
+msgstr "Tá an cuinteán scriosta, agus fuair mé móran taithí!"
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1080
@@ -881,7 +875,7 @@ msgstr ""
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:481
 msgid "This is no game, Konrad! "
-msgstr "Ní cluiche é seo, a Chonrad!"
+msgstr "Ní cluiche é seo, a Chonraid!"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:482
@@ -1049,14 +1043,13 @@ msgstr ""
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:675
-#, fuzzy
 msgid "Move Konrad to capture a village"
-msgstr "Téigh Conrad go dtí an cuaille eolais thiar ó thuaidh"
+msgstr "Bog Conrad baile a tógáil"
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:676
 msgid "Move Li’sar to capture a village"
-msgstr ""
+msgstr "Bog Li’sar baile a tógáil"
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:693
@@ -1079,7 +1072,7 @@ msgstr "Seaman"
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:716
 msgid "Recruit an Elvish Shaman to your north"
-msgstr ""
+msgstr "Earcaigh Seaman Ealbh an aird ó thuaidh"
 
 #. [unit]: id=Elriend, type=Elvish Archer
 #. [else]
@@ -1168,7 +1161,7 @@ msgstr "Elindel"
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:947
 msgid "You’ve learned well, Konrad! "
-msgstr ""
+msgstr "D'fhoghlaim tú go maith, a Chonraid!"
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:948
@@ -1181,7 +1174,7 @@ msgstr ""
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:949
 msgid "You’ve learned well, Li’sar! "
-msgstr ""
+msgstr "D'fhoghlaim tú go maith, a Li’sar! "
 
 #. [then]
 #. [event]
@@ -1213,17 +1206,16 @@ msgstr ""
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:980
-#, fuzzy
 msgid "Orcish Grunts have no ranged attacks, so use your archers against them."
 msgstr ""
-"Níl ionsaithe fadraon ag Saighdiúirí Orcach; Úsáid do chuid boghdóirí ina n-"
+"Níl ionsaithe fadraona ag Saighdiúirí Orcach; Úsáid do chuid boghdóirí ina n-"
 "aghaidh."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:982
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1111
 msgid "Attack the orc with an Archer"
-msgstr "Ionsaigh ar an orc le Boghdóir"
+msgstr "Ionsaigh an orc le Boghdóir"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:983
@@ -1257,7 +1249,7 @@ msgstr ""
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1008
 msgid "Attack the orc with the other Archer"
-msgstr "Ionsaigh ar an orc leis an mBoghdóir eile"
+msgstr "Ionsaigh an orc leis an mBoghdóir eile"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1020
@@ -1310,7 +1302,7 @@ msgstr ""
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1055
 msgid "Recruit another Archer and a Fighter"
-msgstr "Earcaigh eile Boghdóir agus Trodaí"
+msgstr "Earcaigh Boghdóir eile agus Trodaí eile"
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1070
@@ -1324,13 +1316,15 @@ msgstr ""
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1072
+#, fuzzy
 msgid "Move Konrad to another (unowned) village"
-msgstr ""
+msgstr "Bog Conrad chuig baile eile"
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1073
+#, fuzzy
 msgid "Move Li’sar to another (unowned) village"
-msgstr ""
+msgstr "Bog Li’sar chuig baile eile"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1098
@@ -1609,6 +1603,8 @@ msgid ""
 "Second level units are powerful, but not invulnerable! Goodbye, $deadguy."
 "name|."
 msgstr ""
+"Tá aonaid dara leibhéal cumasach, ach níl siad doghonta! Slán leat, a "
+"$deadguy.name|."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1501
@@ -1701,7 +1697,7 @@ msgstr "Trodaí"
 #. [attack]: type=blade
 #: data/campaigns/tutorial/units/Fighteress.cfg:24
 msgid "saber"
-msgstr "marc-chlaíomh"
+msgstr "ráipéar"
 
 #. [unit_type]: id=Quintain, race=mechanical
 #: data/campaigns/tutorial/units/Quintain.cfg:16
